--- a/src/shared/components/Card/Card.scss
+++ b/src/shared/components/Card/Card.scss
@@ -5,12 +5,12 @@
   padding: 1rem;
   background-color: white;
   border-radius: 1rem;
-  box-shadow: 0 4px 10px rgba(0,0,0,0.1);
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
   cursor: pointer;
-  transition: transform 0.2s ease;
+  transition: box-shadow 0.2s ease;
 
   &:hover {
-    transform: scale(1.05);
+    box-shadow: 0 6px 15px rgba(0, 0, 0, 0.15);
   }
 
   &__image {
