--- a/src/components/sceneImages/sceneImages.scss
+++ b/src/components/sceneImages/sceneImages.scss
@@ -1,3 +1,6 @@
+/* ===================== */
+/* SCENE IMAGES */
+/* ===================== */
 .main-scene {
   position: relative;
   height: 100%;
@@ -5,7 +8,7 @@
 
   img {
     position: absolute;
-    transition: transform 0.3s ease, filter 0.3s ease; // para hover interactivo
+    transition: transform 0.3s ease, filter 0.3s ease;
     cursor: pointer;
 
     &:hover {
@@ -38,10 +41,10 @@
     animation: cohete-flotar 4s ease-in-out infinite alternate;
   }
 
-  .neurokids { 
-    bottom: 380px; 
+  .neurokids {
+    bottom: 380px;
     width: 550px;
-    left: 30px; 
+    left: 30px;
   }
 
   .nube {
@@ -51,23 +54,174 @@
     opacity: 0.8;
   }
 
-  /* Posiciones individuales */
   .nube2 { top: 280px; left: 100px; }
   .nube3 { top: 180px; left: 460px; }
-  .nube4 { top: 8px;   right: 80px; }
-  .nube5 { top: 5px;   left: 700px; }
+  .nube4 { top: 8px; right: 80px; }
+  .nube5 { top: 5px; left: 700px; }
   .nube6 { top: 500px; right: 650px; }
   .nube7 { top: 300px; right: 700px; }
 }
 
-/* Animaciones */
 @keyframes nube-mover {
   0% { transform: translateX(0); }
-  100% { transform: translateX(-1200px); } 
+  100% { transform: translateX(-1200px); }
 }
 
 @keyframes cohete-flotar {
   0% { transform: translateY(0) rotate(-2deg); }
   50% { transform: translateY(-20px) rotate(2deg); }
   100% { transform: translateY(0) rotate(-2deg); }
+}
+
+/* Media queries - Scene Images */
+@media (max-width: 1024px) {
+  .main-scene {
+    img {
+      &:hover {
+        transform: scale(1.03) rotate(0.5deg);
+      }
+    }
+
+    .bloques1 {
+      left: 200px;
+      width: 170px;
+    }
+
+    .bloques2 {
+      left: 380px;
+      width: 220px;
+    }
+
+    .cohete {
+      height: 400px;
+    }
+
+    .neurokids {
+      bottom: 280px;
+      width: 420px;
+      left: 20px;
+    }
+
+    .arcoiris {
+      width: 200px;
+    }
+
+    .nube {
+      width: 150px;
+    }
+
+    .nube2 { top: 200px; left: 80px; }
+    .nube3 { top: 120px; left: 350px; }
+    .nube4 { top: 10px; right: 60px; }
+    .nube5 { top: 10px; left: 500px; }
+    .nube6 { top: 400px; right: 500px; }
+    .nube7 { top: 200px; right: 550px; }
+  }
+}
+
+@media (max-width: 768px) {
+  .main-scene {
+    img {
+      &:hover {
+        transform: scale(1.02) rotate(0deg);
+      }
+    }
+
+    .bloques1 {
+      left: 120px;
+      width: 140px;
+    }
+
+    .bloques2 {
+      left: 270px;
+      width: 180px;
+    }
+
+    .cohete {
+      height: 300px;
+      right: 0px;
+    }
+
+    .neurokids {
+      bottom: 200px;
+      width: 300px;
+      left: 10px;
+    }
+
+    .arcoiris {
+      width: 160px;
+    }
+
+    .nube {
+      width: 120px;
+      opacity: 0.7;
+    }
+
+    @keyframes nube-mover {
+      0% { transform: translateX(0); }
+      100% { transform: translateX(-800px); }
+    }
+
+    .nube2 { top: 150px; left: 50px; }
+    .nube3 { top: 80px; left: 250px; }
+    .nube4 { top: 15px; right: 40px; }
+    .nube5 { top: 20px; left: 350px; }
+    .nube6 { top: 300px; right: 350px; }
+    .nube7 { top: 150px; right: 400px; }
+  }
+}
+
+@media (max-width: 480px) {
+  .main-scene {
+    img {
+      &:hover {
+        transform: scale(1.01) rotate(0deg);
+        filter: brightness(1.05);
+      }
+    }
+
+    .bloques1 {
+      left: 70px;
+      width: 100px;
+      display: none;
+    }
+
+    .bloques2 {
+      left: 160px;
+      width: 130px;
+      display: none;
+    }
+
+    .cohete {
+      height: 200px;
+      right: 0px;
+    }
+
+    .neurokids {
+      bottom: 120px;
+      width: 200px;
+      left: 5px;
+    }
+
+    .arcoiris {
+      width: 120px;
+    }
+
+    .nube {
+      width: 100px;
+      opacity: 0.6;
+    }
+
+    @keyframes nube-mover {
+      0% { transform: translateX(0); }
+      100% { transform: translateX(-600px); }
+    }
+
+    .nube2 { display: none; }
+    .nube3 { top: 60px; left: 120px; }
+    .nube4 { top: 20px; right: 20px; }
+    .nube5 { display: none; }
+    .nube6 { display: none; }
+    .nube7 { top: 100px; right: 200px; }
+  }
 }
