--- a/src/pages/prueba/prueba.scss
+++ b/src/pages/prueba/prueba.scss
@@ -4,13 +4,14 @@
   align-items: center;
   font-family: "OpenDyslexic";
   min-height: 100vh;
+  width: 100%;
 }
 
 /* HEADER */
 .prueba-header {
   position: relative;
   width: 100%;
-  max-height: 660px;
+  height: auto;
   overflow: hidden;
 }
 
@@ -19,6 +20,7 @@
   height: auto;
   object-fit: cover;
 }
+
 
 /* CONTENEDOR DE BOTONES */
 .prueba-buttons {
@@ -42,10 +44,15 @@
   }
 }
 
-.prueba-page.nivel1,
-.prueba-page.nivel2,
+.prueba-page.nivel1 {
+  background-color: #c7e1df; 
+}
+.prueba-page.nivel2 {
+  background-color: #b0dfd2;
+}
+
 .prueba-page.nivel3 {
-  background-color: #d6f3f7; 
+  background-color: #0cd177;
 }
 /* SECCIÓN DE CARDS */
 .prueba-cards {
