--- a/src/pages/studentWelcome/studentWelcome.scss
+++ b/src/pages/studentWelcome/studentWelcome.scss
@@ -83,8 +83,8 @@
   }
 
   &__avatar {
-    width: 80px;
-    height: 80px;
+    width: 120px;
+    height: 120px;
     border-radius: 50%;
     background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
     display: flex;
@@ -94,9 +94,9 @@
     box-shadow: 0 4px 12px rgba(102, 126, 234, 0.3);
 
     img {
-      width: 50px;
-      height: 50px;
-      filter: brightness(0) invert(1);
+      width: 90px;
+      height: 90px;
+
     }
   }
 
@@ -175,10 +175,13 @@
       }
     }
 
-    &.locked {
-      cursor: not-allowed;
-      opacity: 0.6;
-    }
+&.inactive {
+  opacity: 0.6;
+
+  .student-welcome__activity-icon {
+    filter: grayscale(100%);
+  }
+}
 
     &-icon {
       width: 70px;
@@ -201,10 +204,6 @@
       background: linear-gradient(135deg, #4facfe 0%, #00f2fe 100%);
     }
 
-    &.locked &-icon {
-      background: #94a3b8;
-      color: white;
-    }
 
     &-type {
       position: absolute;
