--- a/src/pages/userType/userType.scss
+++ b/src/pages/userType/userType.scss
@@ -17,14 +17,14 @@
     }
 
     &__title {
-        font-size: 2.5rem;
+        font-size: 3rem;
         color: white;
         margin-bottom: 1rem;
         font-weight: bold;
     }
 
     &__subtitle {
-        font-size: 1.2rem;
+        font-size: 1.5rem;
         color: rgba(255, 255, 255, 0.9);
         margin: 0;
     }
@@ -67,18 +67,18 @@
     }
 
     &__card-icon {
-        width: 80px;
-        height: 80px;
+        width: 120px;
+        height: 120px;
         margin: 0 auto 1.5rem;
         display: flex;
         align-items: center;
         justify-content: center;
         border-radius: 50%;
-        background: linear-gradient(135deg, #f5f7fa 0%, #c3cfe2 100%);
+        background: linear-gradient(135deg, #f5f7fa 0%, #b0bfd6 100%);
 
         img {
-            width: 50px;
-            height: 50px;
+            width: 90px;
+            height: 90px;
             object-fit: contain;
         }
     }
